--- a/index.html
+++ b/index.html
@@ -1,1 +1,218 @@
-<html>test</html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Portfolio</title>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
+  <style>
+    :root {
+      --red: #e63946;
+      --lavender: #b57edc;
+      --purple: #6c3483;
+      --bg-gradient: linear-gradient(135deg, var(--lavender) 0%, var(--purple) 100%);
+      --text-dark: #2d2d2d;
+      --text-light: #fff;
+    }
+    * {
+      box-sizing: border-box;
+      margin: 0;
+      padding: 0;
+    }
+    body {
+      font-family: 'Roboto', Arial, sans-serif;
+      background: var(--bg-gradient);
+      color: var(--text-dark);
+      min-height: 100vh;
+    }
+    header {
+      background: rgba(255,255,255,0.85);
+      padding: 2rem 0 1.5rem 0;
+      text-align: center;
+      box-shadow: 0 2px 8px rgba(108,52,131,0.08);
+    }
+    .hero {
+      max-width: 700px;
+      margin: 2rem auto 0 auto;
+      padding: 2rem;
+      background: rgba(255,255,255,0.95);
+      border-radius: 1.5rem;
+      box-shadow: 0 4px 24px rgba(182,126,220,0.12);
+    }
+    .hero h1 {
+      font-family: 'Montserrat', sans-serif;
+      font-size: 2.8rem;
+      color: var(--purple);
+      margin-bottom: 0.5rem;
+    }
+    .hero p {
+      font-size: 1.3rem;
+      color: var(--red);
+      margin-bottom: 1.5rem;
+    }
+    .hero .cta {
+      display: inline-block;
+      padding: 0.75rem 2rem;
+      background: var(--purple);
+      color: var(--text-light);
+      border-radius: 2rem;
+      text-decoration: none;
+      font-weight: 500;
+      transition: background 0.2s;
+      margin-top: 1rem;
+    }
+    .hero .cta:hover {
+      background: var(--red);
+    }
+    section {
+      max-width: 900px;
+      margin: 2.5rem auto;
+      background: rgba(255,255,255,0.92);
+      border-radius: 1rem;
+      padding: 2rem;
+      box-shadow: 0 2px 16px rgba(230,57,70,0.07);
+    }
+    section h2 {
+      color: var(--red);
+      font-family: 'Montserrat', sans-serif;
+      margin-bottom: 1.2rem;
+      font-size: 2rem;
+    }
+    .projects {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
+      gap: 1.5rem;
+    }
+    .project-card {
+      background: var(--lavender);
+      border-radius: 1rem;
+      padding: 1.2rem;
+      box-shadow: 0 2px 8px rgba(182,126,220,0.10);
+      transition: transform 0.15s;
+    }
+    .project-card:hover {
+      transform: translateY(-6px) scale(1.03);
+      box-shadow: 0 6px 24px rgba(108,52,131,0.13);
+    }
+    .project-card h3 {
+      color: var(--purple);
+      margin-bottom: 0.5rem;
+      font-size: 1.2rem;
+    }
+    .project-card p {
+      color: var(--text-dark);
+      font-size: 1rem;
+    }
+    .contact-form {
+      display: flex;
+      flex-direction: column;
+      gap: 1rem;
+      max-width: 400px;
+      margin: 0 auto;
+    }
+    .contact-form input, .contact-form textarea {
+      padding: 0.7rem;
+      border: 1px solid var(--lavender);
+      border-radius: 0.5rem;
+      font-size: 1rem;
+      font-family: inherit;
+      background: #f8f6fa;
+    }
+    .contact-form button {
+      background: var(--red);
+      color: var(--text-light);
+      border: none;
+      padding: 0.8rem;
+      border-radius: 2rem;
+      font-size: 1.1rem;
+      font-family: 'Montserrat', sans-serif;
+      cursor: pointer;
+      transition: background 0.2s;
+    }
+    .contact-form button:hover {
+      background: var(--purple);
+    }
+    @media (max-width: 600px) {
+      .hero, section {
+        padding: 1rem;
+      }
+      .hero h1 {
+        font-size: 2rem;
+      }
+      section h2 {
+        font-size: 1.3rem;
+      }
+    }
+  </style>
+</head>
+<body>
+  <header>
+    <div class="hero">
+      <h1>Chanitta Voracharoen</h1>
+      <p>Marketing Specialist</p>
+      <a href="#projects" class="cta">View My Work</a>
+    </div>
+  </header>
+
+  <section id="resume">
+    <h2>Resume</h2>
+    <ul style="list-style: none; padding-left: 0;">
+      <li><strong>Position:</strong> Marketing Specialist</li>
+      <li><strong>Experience:</strong> 7+ years in event management, brand strategy, and digital marketing</li>
+      <li><strong>Education:</strong> B.A. in Marketing, Example University</li>
+      <li><strong>Skills:</strong> Event Planning, Social Media, Content Creation, Public Relations, Team Leadership</li>
+      <li><strong>Languages:</strong> Thai (native), English (fluent)</li>
+    </ul>
+    <p style="margin-top:1rem;">Download full CV: <a href="#" style="color: var(--purple); text-decoration: underline;">(PDF link here)</a></p>
+  </section>
+
+  <section id="projects">
+    <h2>Projects</h2>
+    <div class="projects">
+      <div class="project-card">
+        <h3>Project One</h3>
+        <p>A short description of the project goes here. Highlight what makes it special!</p>
+      </div>
+      <div class="project-card">
+        <h3>Project Two</h3>
+        <p>Another project description. You can add as many as you like, or link to GitHub repos.</p>
+      </div>
+      <div class="project-card">
+        <h3>Project Three</h3>
+        <p>Describe your favorite project, or something you're proud of.</p>
+      </div>
+    </div>
+  </section>
+
+  <section id="events">
+    <h2>Recent Events</h2>
+    <div class="projects">
+      <div class="project-card">
+        <h3>Honeywell Event at Bangna</h3>
+        <p>Successfully organized a large-scale corporate event for Honeywell, focusing on product launches and client engagement. Managed logistics, marketing, and on-site coordination.</p>
+        <span style="font-size:0.95em; color:var(--purple);">March 2024</span>
+      </div>
+      <div class="project-card">
+        <h3>Honeywell Event at Sukhumvit</h3>
+        <p>Coordinated a high-profile networking event for Honeywell at Sukhumvit, featuring keynote speakers and interactive sessions. Oversaw event promotion and guest experience.</p>
+        <span style="font-size:0.95em; color:var(--purple);">November 2023</span>
+      </div>
+      <div class="project-card">
+        <h3>Brand Launch for XYZ Corp</h3>
+        <p>Planned and executed a brand launch event for XYZ Corp, including media outreach, venue management, and post-event analysis.</p>
+        <span style="font-size:0.95em; color:var(--purple);">July 2023</span>
+      </div>
+    </div>
+  </section>
+
+  <section id="contact">
+    <h2>Contact</h2>
+    <form class="contact-form">
+      <input type="text" placeholder="Your Name" required>
+      <input type="email" placeholder="Your Email" required>
+      <textarea rows="4" placeholder="Your Message" required></textarea>
+      <button type="submit">Send Message</button>
+    </form>
+  </section>
+</body>
+</html>
