--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
   <style>
     :root {
       --red: #e63946;
-      --lavender: #b57edc;
-      --purple: #6c3483;
-      --bg-gradient: linear-gradient(135deg, var(--lavender) 0%, var(--purple) 100%);
+      --pink: #ff69b4;
+      --light-pink: #ffe0ef;
+      --deep-pink: #d72660;
+      --bg-gradient: linear-gradient(135deg, var(--light-pink) 0%, var(--pink) 60%, var(--deep-pink) 100%);
       --text-dark: #2d2d2d;
       --text-light: #fff;
     }
@@ -42,7 +43,7 @@
     .hero h1 {
       font-family: 'Montserrat', sans-serif;
       font-size: 2.8rem;
-      color: var(--purple);
+      color: var(--deep-pink);
       margin-bottom: 0.5rem;
     }
     .hero p {
@@ -53,7 +54,7 @@
     .hero .cta {
       display: inline-block;
       padding: 0.75rem 2rem;
-      background: var(--purple);
+      background: var(--pink);
       color: var(--text-light);
       border-radius: 2rem;
       text-decoration: none;
@@ -62,7 +63,7 @@
       margin-top: 1rem;
     }
     .hero .cta:hover {
-      background: var(--red);
+      background: var(--deep-pink);
     }
     section {
       max-width: 900px;
@@ -73,7 +74,7 @@
       box-shadow: 0 2px 16px rgba(230,57,70,0.07);
     }
     section h2 {
-      color: var(--red);
+      color: var(--deep-pink);
       font-family: 'Montserrat', sans-serif;
       margin-bottom: 1.2rem;
       font-size: 2rem;
@@ -84,18 +85,18 @@
       gap: 1.5rem;
     }
     .project-card {
-      background: var(--lavender);
+      background: var(--light-pink);
       border-radius: 1rem;
       padding: 1.2rem;
-      box-shadow: 0 2px 8px rgba(182,126,220,0.10);
+      box-shadow: 0 2px 8px rgba(255,105,180,0.10);
       transition: transform 0.15s;
     }
     .project-card:hover {
       transform: translateY(-6px) scale(1.03);
-      box-shadow: 0 6px 24px rgba(108,52,131,0.13);
+      box-shadow: 0 6px 24px rgba(214,38,96,0.13);
     }
     .project-card h3 {
-      color: var(--purple);
+      color: var(--deep-pink);
       margin-bottom: 0.5rem;
       font-size: 1.2rem;
     }
@@ -112,14 +113,14 @@
     }
     .contact-form input, .contact-form textarea {
       padding: 0.7rem;
-      border: 1px solid var(--lavender);
+      border: 1px solid var(--pink);
       border-radius: 0.5rem;
       font-size: 1rem;
       font-family: inherit;
-      background: #f8f6fa;
+      background: #fff0f7;
     }
     .contact-form button {
-      background: var(--red);
+      background: var(--deep-pink);
       color: var(--text-light);
       border: none;
       padding: 0.8rem;
@@ -130,7 +131,7 @@
       transition: background 0.2s;
     }
     .contact-form button:hover {
-      background: var(--purple);
+      background: var(--pink);
     }
     @media (max-width: 600px) {
       .hero, section {
@@ -163,7 +164,7 @@
       <li><strong>Skills:</strong> Event Planning, Social Media, Content Creation, Public Relations, Team Leadership</li>
       <li><strong>Languages:</strong> Thai (native), English (fluent)</li>
     </ul>
-    <p style="margin-top:1rem;">Download full CV: <a href="#" style="color: var(--purple); text-decoration: underline;">(PDF link here)</a></p>
+    <p style="margin-top:1rem;">Download full CV: <a href="#" style="color: var(--deep-pink); text-decoration: underline;">(PDF link here)</a></p>
   </section>
 
   <section id="projects">
@@ -190,17 +191,17 @@
       <div class="project-card">
         <h3>Honeywell Event at Bangna</h3>
         <p>Successfully organized a large-scale corporate event for Honeywell, focusing on product launches and client engagement. Managed logistics, marketing, and on-site coordination.</p>
-        <span style="font-size:0.95em; color:var(--purple);">March 2024</span>
+        <span style="font-size:0.95em; color:var(--deep-pink);">March 2024</span>
       </div>
       <div class="project-card">
         <h3>Honeywell Event at Sukhumvit</h3>
         <p>Coordinated a high-profile networking event for Honeywell at Sukhumvit, featuring keynote speakers and interactive sessions. Oversaw event promotion and guest experience.</p>
-        <span style="font-size:0.95em; color:var(--purple);">November 2023</span>
+        <span style="font-size:0.95em; color:var(--deep-pink);">November 2023</span>
       </div>
       <div class="project-card">
         <h3>Brand Launch for XYZ Corp</h3>
         <p>Planned and executed a brand launch event for XYZ Corp, including media outreach, venue management, and post-event analysis.</p>
-        <span style="font-size:0.95em; color:var(--purple);">July 2023</span>
+        <span style="font-size:0.95em; color:var(--deep-pink);">July 2023</span>
       </div>
     </div>
   </section>
