--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
   <style>
     :root {
-      --red: #e63946;
-      --pink: #ff69b4;
-      --light-pink: #ffe0ef;
-      --deep-pink: #d72660;
-      --bg-gradient: linear-gradient(135deg, var(--light-pink) 0%, var(--pink) 60%, var(--deep-pink) 100%);
+      --red: #eb2629;
+      --pink: #fac5cd;
+      --light-pink: #fff0f3;
+      --deep-red: #c41b1b;
+      --bg-gradient: linear-gradient(135deg, var(--pink) 0%, var(--red) 100%);
       --text-dark: #2d2d2d;
       --text-light: #fff;
     }
@@ -43,7 +43,7 @@
     .hero h1 {
       font-family: 'Montserrat', sans-serif;
       font-size: 2.8rem;
-      color: var(--deep-pink);
+      color: var(--red);
       margin-bottom: 0.5rem;
     }
     .hero p {
@@ -54,7 +54,7 @@
     .hero .cta {
       display: inline-block;
       padding: 0.75rem 2rem;
-      background: var(--pink);
+      background: var(--red);
       color: var(--text-light);
       border-radius: 2rem;
       text-decoration: none;
@@ -63,7 +63,7 @@
       margin-top: 1rem;
     }
     .hero .cta:hover {
-      background: var(--deep-pink);
+      background: var(--deep-red);
     }
     section {
       max-width: 900px;
@@ -74,7 +74,7 @@
       box-shadow: 0 2px 16px rgba(230,57,70,0.07);
     }
     section h2 {
-      color: var(--deep-pink);
+      color: var(--red);
       font-family: 'Montserrat', sans-serif;
       margin-bottom: 1.2rem;
       font-size: 2rem;
@@ -85,18 +85,18 @@
       gap: 1.5rem;
     }
     .project-card {
-      background: var(--light-pink);
+      background: var(--pink);
       border-radius: 1rem;
       padding: 1.2rem;
-      box-shadow: 0 2px 8px rgba(255,105,180,0.10);
+      box-shadow: 0 2px 8px rgba(250,197,205,0.10);
       transition: transform 0.15s;
     }
     .project-card:hover {
       transform: translateY(-6px) scale(1.03);
-      box-shadow: 0 6px 24px rgba(214,38,96,0.13);
+      box-shadow: 0 6px 24px rgba(235,38,41,0.13);
     }
     .project-card h3 {
-      color: var(--deep-pink);
+      color: var(--red);
       margin-bottom: 0.5rem;
       font-size: 1.2rem;
     }
@@ -117,10 +117,10 @@
       border-radius: 0.5rem;
       font-size: 1rem;
       font-family: inherit;
-      background: #fff0f7;
+      background: var(--light-pink);
     }
     .contact-form button {
-      background: var(--deep-pink);
+      background: var(--red);
       color: var(--text-light);
       border: none;
       padding: 0.8rem;
@@ -131,7 +131,7 @@
       transition: background 0.2s;
     }
     .contact-form button:hover {
-      background: var(--pink);
+      background: var(--deep-red);
     }
     @media (max-width: 600px) {
       .hero, section {
@@ -164,7 +164,7 @@
       <li><strong>Skills:</strong> Event Planning, Social Media, Content Creation, Public Relations, Team Leadership</li>
       <li><strong>Languages:</strong> Thai (native), English (fluent)</li>
     </ul>
-    <p style="margin-top:1rem;">Download full CV: <a href="#" style="color: var(--deep-pink); text-decoration: underline;">(PDF link here)</a></p>
+    <p style="margin-top:1rem;">Download full CV: <a href="#" style="color: var(--red); text-decoration: underline;">(PDF link here)</a></p>
   </section>
 
   <section id="projects">
@@ -191,17 +191,17 @@
       <div class="project-card">
         <h3>Honeywell Event at Bangna</h3>
         <p>Successfully organized a large-scale corporate event for Honeywell, focusing on product launches and client engagement. Managed logistics, marketing, and on-site coordination.</p>
-        <span style="font-size:0.95em; color:var(--deep-pink);">March 2024</span>
+        <span style="font-size:0.95em; color:var(--red);">March 2024</span>
       </div>
       <div class="project-card">
         <h3>Honeywell Event at Sukhumvit</h3>
         <p>Coordinated a high-profile networking event for Honeywell at Sukhumvit, featuring keynote speakers and interactive sessions. Oversaw event promotion and guest experience.</p>
-        <span style="font-size:0.95em; color:var(--deep-pink);">November 2023</span>
+        <span style="font-size:0.95em; color:var(--red);">November 2023</span>
       </div>
       <div class="project-card">
         <h3>Brand Launch for XYZ Corp</h3>
         <p>Planned and executed a brand launch event for XYZ Corp, including media outreach, venue management, and post-event analysis.</p>
-        <span style="font-size:0.95em; color:var(--deep-pink);">July 2023</span>
+        <span style="font-size:0.95em; color:var(--red);">July 2023</span>
       </div>
     </div>
   </section>
