--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       --pink: #fac5cd;
       --light-pink: #fff0f3;
       --deep-red: #c41b1b;
-      --bg-gradient: linear-gradient(135deg, var(--pink) 0%, var(--red) 100%);
+      --bg-gradient: linear-gradient(to bottom, var(--deep-red) 0%, var(--pink) 40%, var(--light-pink) 60%, var(--pink) 80%, var(--deep-red) 100%);
       --text-dark: #2d2d2d;
       --text-light: #fff;
     }
