--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Portfolio</title>
+  <title>Chanitta Voracharoen | Marketing Specialist for Upwork</title>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
   <style>
     :root {
@@ -27,58 +27,132 @@
       min-height: 100vh;
     }
     header {
-      background: rgba(255,255,255,0.85);
-      padding: 2rem 0 1.5rem 0;
+      background: rgba(255,255,255,0.90);
+      padding: 2.5rem 0 2rem 0;
       text-align: center;
-      box-shadow: 0 2px 8px rgba(108,52,131,0.08);
+      box-shadow: 0 2px 8px rgba(235,38,41,0.08);
+      border-bottom: 4px solid var(--red);
     }
-    .hero {
-      max-width: 700px;
-      margin: 2rem auto 0 auto;
-      padding: 2rem;
-      background: rgba(255,255,255,0.95);
-      border-radius: 1.5rem;
-      box-shadow: 0 4px 24px rgba(182,126,220,0.12);
+    .hero-img {
+      width: 120px;
+      height: 120px;
+      border-radius: 50%;
+      background: var(--pink);
+      display: inline-block;
+      margin-bottom: 1.2rem;
+      background-image: url('https://placehold.co/120x120?text=Photo');
+      background-size: cover;
+      background-position: center;
+      border: 4px solid var(--red);
     }
     .hero h1 {
       font-family: 'Montserrat', sans-serif;
-      font-size: 2.8rem;
+      font-size: 2.3rem;
       color: var(--red);
       margin-bottom: 0.5rem;
     }
     .hero p {
-      font-size: 1.3rem;
-      color: var(--red);
-      margin-bottom: 1.5rem;
+      font-size: 1.2rem;
+      color: var(--deep-red);
+      margin-bottom: 1.2rem;
     }
-    .hero .cta {
+    .cta {
       display: inline-block;
       padding: 0.75rem 2rem;
       background: var(--red);
       color: var(--text-light);
       border-radius: 2rem;
       text-decoration: none;
-      font-weight: 500;
-      transition: background 0.2s;
-      margin-top: 1rem;
+      font-weight: 600;
+      font-family: 'Montserrat', sans-serif;
+      font-size: 1.1rem;
+      margin: 0.5rem 0.5rem 0 0.5rem;
+      transition: background 0.2s, box-shadow 0.2s;
+      box-shadow: 0 2px 8px rgba(235,38,41,0.10);
     }
-    .hero .cta:hover {
+    .cta:hover {
       background: var(--deep-red);
+      box-shadow: 0 4px 16px rgba(235,38,41,0.18);
+    }
+    .divider {
+      width: 100%;
+      height: 2px;
+      background: linear-gradient(to right, var(--pink), var(--red), var(--pink));
+      margin: 2.5rem 0 2rem 0;
+      border: none;
     }
     section {
       max-width: 900px;
-      margin: 2.5rem auto;
+      margin: 2rem auto;
       background: rgba(255,255,255,0.92);
       border-radius: 1rem;
       padding: 2rem;
-      box-shadow: 0 2px 16px rgba(230,57,70,0.07);
+      box-shadow: 0 2px 16px rgba(235,38,41,0.07);
     }
     section h2 {
       color: var(--red);
       font-family: 'Montserrat', sans-serif;
       margin-bottom: 1.2rem;
       font-size: 2rem;
+      text-align: center;
     }
+    /* Services */
+    .services {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+      gap: 1.5rem;
+      margin-top: 1.5rem;
+    }
+    .service-card {
+      background: var(--pink);
+      border-radius: 1rem;
+      padding: 1.2rem 1rem;
+      box-shadow: 0 2px 8px rgba(250,197,205,0.10);
+      text-align: center;
+      transition: transform 0.15s;
+    }
+    .service-card:hover {
+      transform: translateY(-6px) scale(1.03);
+      box-shadow: 0 6px 24px rgba(235,38,41,0.13);
+    }
+    .service-card .icon {
+      font-size: 2.2rem;
+      margin-bottom: 0.5rem;
+      color: var(--red);
+    }
+    .service-card h3 {
+      color: var(--deep-red);
+      margin-bottom: 0.4rem;
+      font-size: 1.15rem;
+    }
+    .service-card p {
+      color: var(--text-dark);
+      font-size: 1rem;
+    }
+    /* Why Work With Me */
+    .stats {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 2.5rem;
+      margin-bottom: 1.5rem;
+    }
+    .stat {
+      text-align: center;
+    }
+    .stat strong {
+      display: block;
+      font-size: 2rem;
+      color: var(--red);
+      font-family: 'Montserrat', sans-serif;
+    }
+    .testimonials {
+      margin-top: 1.5rem;
+      text-align: center;
+      font-style: italic;
+      color: var(--deep-red);
+    }
+    /* Portfolio/Events */
     .projects {
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
@@ -104,44 +178,47 @@
       color: var(--text-dark);
       font-size: 1rem;
     }
-    .contact-form {
+    .project-card .date {
+      font-size: 0.95em;
+      color: var(--deep-red);
+      margin-top: 0.5rem;
+      display: block;
+    }
+    /* Resume */
+    .resume-list {
+      list-style: none;
+      padding-left: 0;
+      margin-bottom: 1.2rem;
+    }
+    .resume-list li {
+      margin-bottom: 0.5rem;
+    }
+    .resume-download {
+      color: var(--red);
+      text-decoration: underline;
+      font-weight: 500;
+    }
+    /* Contact */
+    .contact-ctas {
       display: flex;
       flex-direction: column;
+      align-items: center;
       gap: 1rem;
-      max-width: 400px;
-      margin: 0 auto;
-    }
-    .contact-form input, .contact-form textarea {
-      padding: 0.7rem;
-      border: 1px solid var(--pink);
-      border-radius: 0.5rem;
-      font-size: 1rem;
-      font-family: inherit;
-      background: var(--light-pink);
-    }
-    .contact-form button {
-      background: var(--red);
-      color: var(--text-light);
-      border: none;
-      padding: 0.8rem;
-      border-radius: 2rem;
-      font-size: 1.1rem;
-      font-family: 'Montserrat', sans-serif;
-      cursor: pointer;
-      transition: background 0.2s;
-    }
-    .contact-form button:hover {
-      background: var(--deep-red);
+      margin-top: 1.5rem;
     }
     @media (max-width: 600px) {
       .hero, section {
         padding: 1rem;
       }
       .hero h1 {
-        font-size: 2rem;
+        font-size: 1.5rem;
       }
       section h2 {
-        font-size: 1.3rem;
+        font-size: 1.2rem;
+      }
+      .stats {
+        flex-direction: column;
+        gap: 1rem;
       }
     }
   </style>
@@ -149,71 +226,115 @@
 <body>
   <header>
     <div class="hero">
-      <h1>Chanitta Voracharoen</h1>
-      <p>Marketing Specialist</p>
-      <a href="#projects" class="cta">View My Work</a>
+      <div class="hero-img"></div>
+      <h1>Marketing Specialist for Hire on Upwork</h1>
+      <p>I help brands grow with creative event marketing and digital strategy.</p>
+      <a href="https://www.upwork.com/freelancers/chanitta" class="cta" target="_blank" rel="noopener">Hire Me on Upwork</a>
     </div>
   </header>
 
+  <hr class="divider"/>
+
+  <section id="services">
+    <h2>What I Offer</h2>
+    <div class="services">
+      <div class="service-card">
+        <div class="icon">🎉</div>
+        <h3>Event Management</h3>
+        <p>Seamless planning and execution for corporate, brand, and networking events.</p>
+      </div>
+      <div class="service-card">
+        <div class="icon">📈</div>
+        <h3>Brand Strategy</h3>
+        <p>Developing strategies that elevate your brand and drive engagement.</p>
+      </div>
+      <div class="service-card">
+        <div class="icon">💬</div>
+        <h3>Social Media Campaigns</h3>
+        <p>Creative campaigns to boost your online presence and connect with your audience.</p>
+      </div>
+      <div class="service-card">
+        <div class="icon">📝</div>
+        <h3>Content Creation</h3>
+        <p>Compelling content for web, social, and print to tell your brand's story.</p>
+      </div>
+    </div>
+  </section>
+
+  <hr class="divider"/>
+
+  <section id="why-me">
+    <h2>Why Work With Me?</h2>
+    <div class="stats">
+      <div class="stat">
+        <strong>7+</strong>
+        Years Experience
+      </div>
+      <div class="stat">
+        <strong>50+</strong>
+        Events Managed
+      </div>
+      <div class="stat">
+        <strong>98%</strong>
+        Client Satisfaction
+      </div>
+    </div>
+    <div class="testimonials">
+      “Chanitta is a true professional—her events are always a success!”<br>
+      <span style="font-size:0.95em; color:var(--text-dark);">— Happy Client</span>
+    </div>
+  </section>
+
+  <hr class="divider"/>
+
+  <section id="events">
+    <h2>Portfolio / Recent Events</h2>
+    <div class="projects">
+      <div class="project-card">
+        <h3>Honeywell Event at Bangna</h3>
+        <p>Organized a large-scale corporate event for Honeywell, focusing on product launches and client engagement. Managed logistics, marketing, and on-site coordination.</p>
+        <span class="date">March 2024</span>
+      </div>
+      <div class="project-card">
+        <h3>Honeywell Event at Sukhumvit</h3>
+        <p>Coordinated a high-profile networking event for Honeywell at Sukhumvit, featuring keynote speakers and interactive sessions. Oversaw event promotion and guest experience.</p>
+        <span class="date">November 2023</span>
+      </div>
+      <div class="project-card">
+        <h3>Brand Launch for XYZ Corp</h3>
+        <p>Planned and executed a brand launch event for XYZ Corp, including media outreach, venue management, and post-event analysis.</p>
+        <span class="date">July 2023</span>
+      </div>
+    </div>
+    <div style="text-align:center; margin-top:1.5rem;">
+      <a href="https://www.upwork.com/freelancers/chanitta" class="cta" target="_blank" rel="noopener">See More on Upwork</a>
+    </div>
+  </section>
+
+  <hr class="divider"/>
+
   <section id="resume">
-    <h2>Resume</h2>
-    <ul style="list-style: none; padding-left: 0;">
+    <h2>Resume Snapshot</h2>
+    <ul class="resume-list">
       <li><strong>Position:</strong> Marketing Specialist</li>
       <li><strong>Experience:</strong> 7+ years in event management, brand strategy, and digital marketing</li>
       <li><strong>Education:</strong> B.A. in Marketing, Example University</li>
       <li><strong>Skills:</strong> Event Planning, Social Media, Content Creation, Public Relations, Team Leadership</li>
       <li><strong>Languages:</strong> Thai (native), English (fluent)</li>
     </ul>
-    <p style="margin-top:1rem;">Download full CV: <a href="#" style="color: var(--red); text-decoration: underline;">(PDF link here)</a></p>
+    <p style="text-align:center;">
+      <a href="#" class="resume-download">Download full CV (PDF)</a>
+    </p>
   </section>
 
-  <section id="projects">
-    <h2>Projects</h2>
-    <div class="projects">
-      <div class="project-card">
-        <h3>Project One</h3>
-        <p>A short description of the project goes here. Highlight what makes it special!</p>
-      </div>
-      <div class="project-card">
-        <h3>Project Two</h3>
-        <p>Another project description. You can add as many as you like, or link to GitHub repos.</p>
-      </div>
-      <div class="project-card">
-        <h3>Project Three</h3>
-        <p>Describe your favorite project, or something you're proud of.</p>
-      </div>
-    </div>
-  </section>
-
-  <section id="events">
-    <h2>Recent Events</h2>
-    <div class="projects">
-      <div class="project-card">
-        <h3>Honeywell Event at Bangna</h3>
-        <p>Successfully organized a large-scale corporate event for Honeywell, focusing on product launches and client engagement. Managed logistics, marketing, and on-site coordination.</p>
-        <span style="font-size:0.95em; color:var(--red);">March 2024</span>
-      </div>
-      <div class="project-card">
-        <h3>Honeywell Event at Sukhumvit</h3>
-        <p>Coordinated a high-profile networking event for Honeywell at Sukhumvit, featuring keynote speakers and interactive sessions. Oversaw event promotion and guest experience.</p>
-        <span style="font-size:0.95em; color:var(--red);">November 2023</span>
-      </div>
-      <div class="project-card">
-        <h3>Brand Launch for XYZ Corp</h3>
-        <p>Planned and executed a brand launch event for XYZ Corp, including media outreach, venue management, and post-event analysis.</p>
-        <span style="font-size:0.95em; color:var(--red);">July 2023</span>
-      </div>
-    </div>
-  </section>
+  <hr class="divider"/>
 
   <section id="contact">
-    <h2>Contact</h2>
-    <form class="contact-form">
-      <input type="text" placeholder="Your Name" required>
-      <input type="email" placeholder="Your Email" required>
-      <textarea rows="4" placeholder="Your Message" required></textarea>
-      <button type="submit">Send Message</button>
-    </form>
+    <h2>Contact & Hire</h2>
+    <div class="contact-ctas">
+      <a href="mailto:chanitta@email.com?subject=Contact%20from%20Portfolio%20Website" class="cta" style="min-width:180px;">Email Me</a>
+      <a href="https://www.upwork.com/freelancers/chanitta" class="cta" target="_blank" rel="noopener" style="min-width:180px;">Hire Me on Upwork</a>
+    </div>
   </section>
 </body>
 </html>
