--- a/index.html
+++ b/index.html
@@ -27,11 +27,40 @@
       min-height: 100vh;
     }
     header {
-      background: rgba(255,255,255,0.90);
-      padding: 2.5rem 0 2rem 0;
+      background-image: url('img/banner.png');
+      background-size: cover;
+      background-position: center;
+      padding: 3.5rem 0 2.5rem 0;
       text-align: center;
       box-shadow: 0 2px 8px rgba(235,38,41,0.08);
       border-bottom: 4px solid var(--red);
+      width: 100%;
+    }
+    .hero {
+      position: relative;
+      max-width: 700px;
+      margin: 0 auto;
+      padding: 0;
+      background: none;
+      border-radius: 0;
+      box-shadow: none;
+      z-index: 2;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
+    .hero-overlay {
+      position: absolute;
+      top: 0;
+      left: 50%;
+      transform: translateX(-50%);
+      width: 100%;
+      height: 100%;
+      background: rgba(255,255,255,0.70);
+      border-radius: 1.2rem;
+      z-index: 1;
+      max-width: 700px;
+      pointer-events: none;
     }
     .hero-img {
       width: 120px;
@@ -40,21 +69,28 @@
       background: var(--pink);
       display: inline-block;
       margin-bottom: 1.2rem;
-      background-image: url('https://placehold.co/120x120?text=Photo');
+      background-image: url('img/banner.png');
       background-size: cover;
       background-position: center;
       border: 4px solid var(--red);
+      z-index: 2;
+    }
+    .hero h1, .hero p {
+      position: relative;
+      z-index: 2;
     }
     .hero h1 {
       font-family: 'Montserrat', sans-serif;
       font-size: 2.3rem;
       color: var(--red);
       margin-bottom: 0.5rem;
+      text-shadow: 0 2px 8px rgba(0,0,0,0.10), 0 1px 2px rgba(255,255,255,0.7);
     }
     .hero p {
       font-size: 1.2rem;
       color: var(--deep-red);
       margin-bottom: 1.2rem;
+      text-shadow: 0 1px 4px rgba(0,0,0,0.08), 0 1px 2px rgba(255,255,255,0.5);
     }
     .cta {
       display: inline-block;
@@ -225,7 +261,8 @@
 </head>
 <body>
   <header>
-    <div class="hero">
+    <div class="hero" style="position:relative;">
+      <div class="hero-overlay"></div>
       <div class="hero-img"></div>
       <h1>Marketing Specialist for Hire on Upwork</h1>
       <p>I help brands grow with creative event marketing and digital strategy.</p>
